--- a/templates/title_screen.html
+++ b/templates/title_screen.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bear's Karaoke</title>
+    <title>Bear's Karaoke!</title>
     <!-- <link rel="stylesheet" href="{{ url_for('static', filename='js/script.js') }}"> -->
 </head>
 <body>
+    <h1>Welcome to bear's Karaoke!</h1>
     <section id="upload">
-        <h1>Upload a Youtube Link</h1>
+        <h2>Upload a Youtube Link</h2>
         <input id="yt-url" type="url" placeholder="Youtube Link">
         <button id="go">Separate</button>
     </section>
@@ -19,13 +20,7 @@
         <select id="song_select">
             <option value="" disabled>Loading songs...</option>
         </select>
-    </section>
-
-    <section id="player">
-        <h1>Vocals</h1>
-        <audio id="vocals" controls></audio>
-        <h2>Accompaniment</h2>
-        <audio id="accompaniment" controls></audio>
+        <button id="start">Sing!</button>
     </section>
     
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
