--- a/templates/karaoke_room.html
+++ b/templates/karaoke_room.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bear's Karaoke Room: {{track.replace("_", " ")}}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <h1>{{track.replace("_", " ")}}</h1>
