--- a/templates/karaoke_room.html
+++ b/templates/karaoke_room.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bear's Karaoke Room: {{track.replace("_", " ")}}</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aldrich&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <h1>{{track.replace("_", " ")}}</h1>
-    <section id="player">
-        <h1>Vocals</h1>
-        <audio controls src="{{url_for('static', filename='songs/' ~ track ~ '/vocals/' ~ track ~ '_vocals.wav')}}"></audio>
-        <h2>Accompaniment</h2>
-        <audio controls src="{{url_for('static', filename='songs/' ~ track ~ '/accompaniment/' ~ track ~ '_accompaniment.wav')}}"></audio>
-    </section>
+    <div id="canvas-container" style="position: relative; width:100%; height: 100%">
+    <canvas id="canvas"></canvas>
+    <div class="overlay-text">
+    <h2>{{track.replace("_", " ")}}</h2>
+        <div id="lyrics"></div>
+        <div class="player">
+            <button id="play-btn">🎤</button>
+        <span id="time">0:00</span>
+        <input type="range" id="seek" min="0" max="100" value="0">
+        </div>
+    </div>
+    <audio id="player-audio" src="{{url_for('static', filename='songs/' ~ track ~ '/accompaniment/' ~ track ~ '_accompaniment.wav')}}"></audio>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
 </body>
 </html>
