--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,3 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
-
 h1 {
     position: absolute;
     top: 30%;
@@ -17,6 +11,9 @@ html, body{
 	padding: 0;
 	height: 100%;
 	overflow: hidden;
+}
+
+body.hide_cursor{
     cursor: none;
 }
 
@@ -160,3 +157,24 @@ audio {
   pointer-events: auto;
 }
 
+#lyrics {
+    position: absolute;
+    top: 30%;
+    width: 100%;
+    text-align: center;
+}
+
+#lyrics p {
+    width: 100%;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    position: absolute;
+}
+
+#lyrics p.active {
+    opacity: 1;
+}
+
+.hide_on_idle {
+    transition: opacity 0.3s ease;
+}
