--- a/templates/karaoke_room.html
+++ b/templates/karaoke_room.html
@@ -13,13 +13,13 @@
     <div id="canvas-container" style="position: relative; width:100%; height: 100%">
     <canvas id="canvas"></canvas>
     <div class="overlay-text">
-    <h2>{{track.replace("_", " ")}}</h2>
-        <div id="lyrics"></div>
-        <div class="player">
-            <button id="play-btn">🎤</button>
-        <span id="time">0:00</span>
-        <input type="range" id="seek" min="0" max="100" value="0">
-        </div>
+    <h2 id="song_title">{{track.replace("_", " ")}}</h2>
+    <div id="lyrics"></div>
+    <div class="player hide_on_idle">
+    <button id="play-btn" class="hide_on_idle">🎤</button>
+    <span id="time">0:00</span>
+    <input type="range" id="seek" min="0" max="100" value="0">
+    </div>
     </div>
     <audio id="player-audio" src="{{url_for('static', filename='songs/' ~ track ~ '/accompaniment/' ~ track ~ '_accompaniment.wav')}}"></audio>
     <script src="{{url_for('static', filename='js/script.js')}}"></script>
